dhcp-probe (1.3.0-11) UNRELEASED; urgency=low

  * Upgrade to 3.9.4 Debian policy.

 -- Laurent Guignard <lguignard.debian@gmail.com>  Mon, 20 Apr 2015 11:13:17 +0200

dhcp-probe (1.3.0-10) unstable; urgency=low

  * Fix rules script (add build-arch and build-indep target)
  * Fix dhcp-probe.init.d script to add Description field of LSBInitScripts

 -- Laurent Guignard <lguignard.debian@gmail.com>  Thu, 24 Nov 2011 21:41:08 +0100

dhcp-probe (1.3.0-9) unstable; urgency=low

  * Fix rules script to suite 3.9.2 Debian policy,
  * Fix dhcp-probe.init.d file.

 -- Laurent Guignard <lguignard.debian@gmail.com>  Tue, 25 Oct 2011 21:34:32 +0200

dhcp-probe (1.3.0-8) unstable; urgency=low

  * Fix bashisms in dhcp-probe.init.d script (closes: #619045). Thanks
  to Cristian Ionescu-Idbohrn <cristian.ionescu-idbohrn@axis.com> for his
  bug submit and solution proposal.
  * Fix dependency problem for kfreebsd Debian port (closes: #620644). Thanks 
  to Julien Cristau <jcristau@debian.org> for his bug submit. This cause 
  iproute package depency removal.

 -- Laurent Guignard <lguignard.debian@gmail.com>  Thu, 28 Apr 2011 17:21:44 +0200

dhcp-probe (1.3.0-7) unstable; urgency=low

  * Fix dhcp-probe.init.d script to display messages at right place,
    update code to avoid PID file reading error to be displayed.
  * Fix dependence on iproute package (closes: #603918)

 -- Laurent Guignard <lguignard.debian@gmail.com>  Tue, 23 Nov 2010 22:23:17 +0100

dhcp-probe (1.3.0-6) unstable; urgency=low

  * Fix dhcp-probe.init.d script revision, thanks Cristian Ionescu-Idbohrn 
    <cristian.ionescuidbohrn@gmail.com> for patch (closes: #586595).
  * Add documentation for Debian developers in README.Debian file.

 -- Laurent Guignard <lguignard.debian@gmail.com>  Tue, 12 Oct 2010 21:55:02 +0200

dhcp-probe (1.3.0-5) unstable; urgency=low

  * Fix dhcp-probe.postinst with missing net-tools package dependency.
  * Switch to dpkg-source 3.0 (quilt) format.