@@ -1,6 +1,8 @@
 dhcp-probe (1.3.0-11) UNRELEASED; urgency=low
 
-  * Upgrade to 3.9.4 Debian policy.
+  * Upgrade to 3.9.4 Debian policy,
+  * Fix startup depencies tu suite LSB3.1,
+  
 
  -- Laurent Guignard <lguignard.debian@gmail.com>  Mon, 20 Apr 2015 11:13:17 +0200
 
